# jp-stock-analysis-engine

./: .gitignore  CLAUDE.md  README.md  prompt_stock_engine_v1_success.md  pyproject.toml
docs/: audit_bundle.md  baseline_history.md  commercial_readiness_gap.md  commercial_validation.md  competition_benchmark_gap_analysis.md  confidence_aware_screening.md  current_state_product_comparison_and_roadmap.md  current_stock_analysis_system_readiness.md  current_two_project_stock_analysis_status.md  factor_ranking_validation.md  forward_return_validation.md  forward_return_validation_results.md  future_rag_integration_separate_project.md  jp_stock_analysis_engine.md  jquants_daily_bars_pipeline.md  jquants_incremental_price_store.md  jquants_listed_master_export.md  jquants_provider.md  local_price_csv_input.md  model_diversity.md  modeling_pipeline.md  neutralization_metrics.md  pipeline_regression.md  pipeline_runner.md  portfolio_evaluation.md  run_comparison.md  topix1000_export_provider.md  v1_jquants_endpoint_diagnosis.md  v1_jquants_live_pending.md  v1_jquants_provider.md  v1_rag_export_schema_fix.md  v1_review.md  v1_sector_relative_scoring.md  v1_sector_relative_signal_support.md  v1_sector_relative_universe_validation.md  v1_sector_signal_threshold_config.md  walk_forward_validation.md
scripts/: fetch_jquants_financial_summary_daily.py
tests/: conftest.py  test_cli.py  test_daily_bars_features.py  test_disclosure_nlp.py  test_forward_returns.py  test_fundamentals.py  test_incremental_prices.py  test_jquants_daily_bars.py  test_jquants_listed_master.py  (+41 more)
(+125 files in other folders)
