[project]
name = "jp-stock-analysis-engine"
version = "0.1.0"
description = "Japanese stock analysis engine for screening and self-directed trading research"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
# Optional modeling backends. The modeling package itself needs no extra deps
# (it uses the core pandas/numpy); these only add the optional ML rankers and
# are NEVER required for a minimal install or for the test-suite to pass.
modeling = []
lightgbm = [
  "lightgbm>=4.0",
]
catboost = [
  "catboost>=1.2",
]
all-modeling = [
  "lightgbm>=4.0",
  "catboost>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
